--- a/fisegoogle/AndroidManifest.xml
+++ b/fisegoogle/AndroidManifest.xml
@@ -7,8 +7,6 @@
 	<permission 
 	    android:name="com.example.fisegoogle.permission.MAPS_RECEIVE"
         android:protectionLevel="signature"/>
-	<uses-permission 
-	    android:name="com.example.fisegoogle.permission.MAPS_RECEIVE"/>
     
     <uses-sdk
         android:minSdkVersion="11"
@@ -30,20 +28,29 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-    	<meta-data android:name="com.google.android.gms.version"
-       android:value="@integer/google_play_services_version" />
-        <activity
-            android:name="com.example.fisegoogle.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <meta-data 
-        android:name="com.google.android.maps.v2.API_KEY"
-        android:value="AIzaSyBv_OlUaLqzxiO3fd2v_RVhdzuS3zv84_w"/>
-        <activity android:name="MapActivity"></activity>   
+    
+    	<meta-data 
+        	android:name="com.google.android.gms.version"
+        	android:value="@integer/google_play_services_version" />
+       
+    	<activity
+        	android:name="com.example.fisegoogle.SplashScreen"
+        	android:label="@string/app_name" 
+        	android:screenOrientation="portrait"
+        	android:theme="@android:style/Theme.Black.NoTitleBar">
+            
+    		<intent-filter>
+        		<action android:name="android.intent.action.MAIN" />
+        		<category android:name="android.intent.category.LAUNCHER" />
+    		</intent-filter>
+    	</activity>
+    
+    	<meta-data 
+        	android:name="com.google.android.maps.v2.API_KEY"
+        	android:value="AIzaSyAtZ3PXmxt6d0gLzXibdPl7VwpfMEWzDw0"/>
+    	<activity android:name="MainActivity"></activity>
+    	<activity android:name="MapActivity"></activity>
+    	<activity android:name="PlaceDetailsActivity"></activity>   
+    	<activity android:name="SinglePlaceActivity"></activity>
     </application>
 </manifest>
