--- a/fisegoogle/bin/AndroidManifest.xml
+++ b/fisegoogle/bin/AndroidManifest.xml
@@ -25,9 +25,9 @@
 	
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppBaseTheme" >
     
     	<meta-data 
         	android:name="com.google.android.gms.version"
