--- a/fisegoogle/bin/AndroidManifest.xml
+++ b/fisegoogle/bin/AndroidManifest.xml
@@ -27,7 +27,7 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@style/AppBaseTheme" >
+        android:theme="@style/CustomActionBarTheme" >
     
     	<meta-data 
         	android:name="com.google.android.gms.version"
@@ -45,10 +45,16 @@
     		</intent-filter>
     	</activity>
 		<activity android:name="DashboardActivity"></activity>
-		<activity android:name="MainActivity"></activity>
-		<activity android:name="CafeActivity"></activity>
-    	<activity android:name="MapActivity"></activity>
-    	<activity android:name="BarActivity"></activity>
+		<activity
+		     android:name="MainActivity"
+		     android:parentActivityName="com.example.myfirstapp.DashboardActivity" />
+		<activity 
+		    android:name="CafeActivity"
+		    android:parentActivityName="com.example.myfirstapp.DashboardActivity"/>
+    	<activity android:name="MapActivity" />
+    	<activity 
+    	    android:name="BarActivity"
+    	    android:parentActivityName="com.example.myfirstapp.DashboardActivity" />
     	<activity android:name="PlaceDetailsActivity"></activity>   
     	<activity android:name="SinglePlaceActivity"></activity>
     	<meta-data 
